--- a/packages/client/src/index.css
+++ b/packages/client/src/index.css
@@ -2,20 +2,40 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  box-sizing: border-box;
+}
+
 .bgImage {
   background-image: url("./assets/bgImage.png");
   background-repeat: no-repeat;
-  background-position: center;
-  height: auto;
   background-size: cover;
+  background-position: center;
+  height: 100%;
+  min-height: 100vh;
+  background-position: center;
 }
 
-/* Large devices (laptops/desktops, 1024px and up) */
-@media only screen and (min-width: 1024px) {
+/* @media (min-width: 640px) {
   .bgImage {
-    min-height: 100vh;
-    background-size: cover;
-
-    background-repeat: no-repeat;
+    min-height: 640px;
   }
 }
+
+@media (min-width: 768px) {
+  .bgImage {
+    min-height: 768px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .bgImage {
+    min-height: 1024px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .bgImage {
+    min-height: 1280px;
+  }
+} */
