--- a/packages/client/src/index.css
+++ b/packages/client/src/index.css
@@ -7,7 +7,7 @@
 }
 
 .bgImage {
-  background-image: url("./assets/bgImage.svg");
+  background-image: url("./assets/bgImage.webp");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -18,33 +18,6 @@
 
 @media only screen and (max-width: 767px) {
   .bgImage {
-    background-image: url("./assets/bgMobile.svg");
+    background-image: url("./assets/bgMobile.webp");
   }
 }
-
-/*
-
-@media (min-width: 1024px) {
-  .bgImage {
-    background-image: url("./assets/bgMobile.svg");
-    min-height: 1024px;
-  }
-}
-
-@media (min-width: 768px) {
-  .bgImage {
-    min-height: 768px;
-  }
-}
-
-@media (min-width: 1024px) {
-  .bgImage {
-    min-height: 1024px;
-  }
-}
-
-@media (min-width: 1280px) {
-  .bgImage {
-    min-height: 1280px;
-  }
-} */
