--- a/packages/client/src/index.css
+++ b/packages/client/src/index.css
@@ -2,27 +2,32 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 @layer base {
   :root {
-    --background: 0 0% 100%;
-    --foreground: 240 10% 3.9%;
-    --card: 0 0% 100%;
-    --card-foreground: 240 10% 3.9%;
-    --popover: 0 0% 100%;
-    --popover-foreground: 240 10% 3.9%;
-    --primary: 240 5.9% 10%;
-    --primary-foreground: 0 0% 98%;
-    --secondary: 240 4.8% 95.9%;
-    --secondary-foreground: 240 5.9% 10%;
-    --muted: 240 4.8% 95.9%;
-    --muted-foreground: 240 3.8% 45%;
-    --accent: 240 4.8% 95.9%;
-    --accent-foreground: 240 5.9% 10%;
-    --destructive: 0 72% 51%;
-    --destructive-foreground: 0 0% 98%;
-    --border: 240 5.9% 90%;
-    --input: 240 5.9% 90%;
-    --ring: 240 5.9% 10%;
+    --background: hsl(0, 0%, 98%);
+    --card: hsl(0, 5%, 85%);
+    --card-foreground: hsl(0, 0%, 36.9%);
+    --popover: hsl(0, 5%, 85%);
+    --popover-foreground: hsl(0, 0%, 36.9%);
+    --primary: hsl(184, 100%, 39.6%);
+    --primary-foreground: hsl(180, 38%, 89%);
+    --secondary: hsl(197, 100%, 20%);
+    --secondary-foreground: hsl(184, 100%, 39.6%);
+    --muted: hsl(200, 14%, 74%);
+    --muted-foreground: hsl(0, 0%, 100%);
+    --accent: hsl(36, 89%, 54%);
+    --accent-foreground: hsl(184, 100%, 39.6%);
+    --destructive: hsl(342, 78%, 60%);
+    --destructive-foreground: hsl(180, 38%, 89%);
+    --border: hsl(210, 16%, 72%);
+    --input: hsl(210, 16%, 72%);
+    --ring: hsl(184, 100%, 39.6%);
     --radius: 0.5rem;
   }
 }
